@@ -1,3 +1,8 @@
+2007-04-20  Srinivasa Ragavan  <sragavan@novell.com>
+
+	* e-task-widget.c: (e_task_widget_construct): Show spinner instead of
+	the component icon. 
+
 2007-04-19  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #429422
